scrapper/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrapper
spec:
  replicas: 5
  selector:
    matchLabels:
      project: scrapper
  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        project: scrapper
    spec:
      containers:
        - name: scrapper
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          image: mahdimehrabi/rb-scrapper:v3
