scrapper/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rb-scrapper-svc 
  labels:
    service: rb-scrapper
spec:
  selector:
    project: scrapper
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP 
      name: http
